[project]
name = "project-iii"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.4",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.4.0",
]
